# routes/api.php
@@ -45,3 +45,6 @@ Route::put('/update-akun/{id}/', [ApiController::class, 'update_akun']);
 Route::get('/list-banner-utama', [ApiController::class, 'daftar_banner_utama']);
 Route::get('/list-banner-diskon', [ApiController::class, 'daftar_banner_diskon']);
 Route::get('/list-banner-spesial', [ApiController::class, 'daftar_banner_spesial']);
+
+Route::get('/list-pesanan/{id}/', [ApiController::class, 'list_pesanan']);
+Route::get('/detail-pesanan/{id}/', [ApiController::class, 'detail_pesanan']);
